Spring Boot: add engineering quality toolchain + docs
Adds eight quality tools to backend-spring that together give the
repo a production-grade engineering baseline:

- ErrorProne (2.36.0)      compile-time bug pattern detection
- Spotless + google-java-format 1.28.0  consistent formatting
- JaCoCo (0.8.12)          coverage report + Surefire agent
- Maven Enforcer (3.5.0)   dep convergence, required Java/Maven
- ArchUnit (1.3.0)         layering rules as JUnit tests
- OWASP Dependency-Check   CVE scanning (opt-in, ~500MB NVD db)
- Pitest (1.17.0)          mutation testing (opt-in)
- Spring Boot Actuator     /actuator/health, /actuator/info

All tools run cleanly out of the box on JDK 25 with zero findings
in the existing code. 111 tests pass end-to-end (was 102), 9 new
tests are ArchUnit architecture rules.

Key config and gotchas (full details in docs/ENGINEERING.md):

- backend-spring/.mvn/jvm.config — new file. ErrorProne reaches
  into com.sun.tools.javac internals which JDK 25 seals by
  default. The -J--add-exports in compilerArgs only apply when
  the compiler plugin forks, which it doesn't by default, so we
  need the exports at the Maven JVM level via jvm.config. Without
  this, compile fails with IllegalAccessError on BasicJavacTask.

- google-java-format pinned at 1.28.0. Older versions (including
  the 1.19.1 Spotless 2.44.3 bundles by default) crash on JDK 25
  with NoSuchMethodError on Log$DeferredDiagnosticHandler. 1.28.0
  is the first release that works across JDK 21–25.

- Mass reformat: every Java file under backend-spring was
  reformatted to google-java-format style (2-space indent,
  re-sorted imports, trailing whitespace stripped). This makes
  for a large but mechanical diff — the bytecode semantics are
  unchanged, which is why all pre-existing tests still pass.

- Spring Security: /actuator/health and /actuator/info added to
  the permitAll list so orchestrator probes (k8s, ECS) don't need
  credentials. All other actuator endpoints are al